Модифицированные файлы с измёнённым обзацем

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <br>
     <span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi necessitatibus voluptates qui inventore distinctio quis quam quia praesentium! Laboriosam ex, voluptas iste consequuntur dolorum eaque ullam fugiat natus error rem?</span>
     <br>
+    <p class="shadowp">Стилизированный текст </p>
     <ul>
         <li>1 элемент</li>
         <li>2 элемент</li>
@@ -28,7 +29,7 @@
     <button>Кнопка</button>
     <a href="https://wikipedia.org/">
         <p>Ссылка на Вики</p>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1c/Wiki_letter_w_cropped.svg/1200px-Wiki_letter_w_cropped.svg.png" alt="">
+        <img class="wiki_image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1c/Wiki_letter_w_cropped.svg/1200px-Wiki_letter_w_cropped.svg.png" alt="">
     </a>
 </body>
 </html>
